--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -176,73 +176,32 @@
                 <div class="feed"
                     style="background-image: url(./GALLERY/bg3.jpg); background-position: center; background-repeat: no-repeat; background-size: cover;">
                     <div class="feedback">
-                        <h1 style="font-size: 55px;color: aliceblue;"><span style="font-weight: normal;">FEEDBACK OF
+                        <h1 style="font-size: 50px;">FEEDBACK OF
                             </span>OUR CUSTOMER</h1>
                     </div>
                     <div class="fpic">
-                        <div id="carouselExampleCaptions" class="carousel slide">
-                            <div class="carousel-indicators">
-                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
-                                    class="active" aria-current="true" aria-label="Slide 1"></button>
-                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                                    aria-label="Slide 2"></button>
-                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                                    aria-label="Slide 3"></button>
-                            </div>
+                        <div id="carouselExampleIndicators" class="carousel slide">
+                            <ol class="carousel-indicators">
+                                <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+                                <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+                                <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+                            </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="./GALLERY/bg4.jpg" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <div class="customer" style="background-image: url(./GALLERY/mypic2.png);">
-                                        </div>
-                                        <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus quia sequi
-                                            consequatur doloribus, maxime, eum amet totam odit, tempora provident soluta
-                                            dolores fugit officiis nihil. Voluptas odio atque quasi saepe officia.
-                                            Incidunt eum quo totam. Adipisci delectus expedita nam, veritatis ut
-                                            deleniti ad? Voluptate animi sequi dolorem officiis ex iure voluptatem hic
-                                            error, quo, eum natus vero voluptates, itaque facilis</h5>
-                                    </div>
+                                    <img class="d-block w-100" src="./GALLERY/snap.JPG" alt="First slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="./GALLERY/bg4.jpg" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <img src="./GALLERY/bg4.jpg" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <div class="customer" style="background-image: url(./GALLERY/mypic2.png);">
-                                        </div>
-                                        <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus quia sequi
-                                            consequatur doloribus, maxime, eum amet totam odit, tempora provident soluta
-                                            dolores fugit officiis nihil. Voluptas odio atque quasi saepe officia.
-                                            Incidunt eum quo totam. Adipisci delectus expedita nam, veritatis ut
-                                            deleniti ad? Voluptate animi sequi dolorem officiis ex iure voluptatem hic
-                                            error, quo, eum natus vero voluptates, itaque facilis</h5>
-                                    </div>
-                                    </div>
+                                    <img class="d-block w-100" src="./GALLERY/snap.JPG" alt="Second slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="./GALLERY/bg4.jpg" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <img src="./GALLERY/bg4.jpg" class="d-block w-100" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <div class="customer" style="background-image: url(./GALLERY/mypic2.png);">
-                                            </div>
-                                            <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus quia sequi
-                                                consequatur doloribus, maxime, eum amet totam odit, tempora provident soluta
-                                                dolores fugit officiis nihil. Voluptas odio atque quasi saepe officia.
-                                                Incidunt eum quo totam. Adipisci delectus expedita nam, veritatis ut
-                                                deleniti ad? Voluptate animi sequi dolorem officiis ex iure voluptatem hic
-                                                error, quo, eum natus vero voluptates, itaque facilis</h5>
-                                        </div>
-                                    </div>
+                                    <img class="d-block w-100" src="./GALLERY/snap.JPG" alt="Third slide">
                                 </div>
                             </div>
-                            <button class="carousel-control-prev" type="button"
-                                data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
                             </button>
-                            <button class="carousel-control-next" type="button"
-                                data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Next</span>
                             </button>
@@ -305,6 +264,9 @@
 
         </section>
         <p style="text-align: center;">© 2024 Zentucky Fried Chicken. All Rights Reserved.</p>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 
 
 
